Assesment pane added

--- a/interview_app/templates/interview_app/index.html
+++ b/interview_app/templates/interview_app/index.html
@@ -30,6 +30,7 @@
                     <textarea id="user-input" rows="2"></textarea>
                     <button id="send-button">Send</button>
                     <button id="voice-button">🎤</button>
+                    <button id="leave-button">Leave</button>
                 </div>
             </div>
         </div>
