--- a/users/templates/users/home.html
+++ b/users/templates/users/home.html
@@ -11,6 +11,7 @@
         <p>You are logged in as {{ user.username }}.</p>
         <!-- "Take Interview" points to the index view in interview_app -->
         <a href="{% url 'index' %}">Take Interview</a><br>
+        <a href="{% url 'list_interviews' %}">View My Assessments</a><br>
         <a href="{% url 'logout' %}">Logout</a>
     {% else %}
         <a href="{% url 'login' %}">Login</a><br>
