--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -4,14 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Register</title>
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'users/css/style.css' %}">
 </head>
 <body>
-    <h2>Register</h2>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Register</button>
-    </form>
-    <a href="{% url 'home' %}">Back to Home</a>
+    <nav>
+        <div class="nav-right">
+            <a href="{% url 'home' %}">Back to Home</a>
+        </div>
+    </nav>
+    <div class="form-container">
+        <h2>Register</h2>
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-content">
+                {{ form.as_p }}
+            </div>
+            <button type="submit">Register</button>
+        </form>
+    </div>
 </body>
 </html>
