--- a/users/static/users/css/style.css
+++ b/users/static/users/css/style.css
@@ -65,3 +65,40 @@ h2 {
 .actions a:hover {
     background-color: #5a7391;
 }
+
+.container {
+    text-align: center;
+    margin-top: 50px;
+}
+
+button {
+    padding: 15px 30px;
+    margin: 10px;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: #6d84b4;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+    background-color: #5a7391;
+}
+
+.interview-button {
+    padding: 15px 30px;
+    margin: 10px;
+    font-size: 18px;
+    cursor: pointer;
+    background-color: #6d84b4;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    transition: background-color 0.3s;
+}
+
+.interview-button:hover {
+    background-color: #5a7391;
+}
