--- a/users/templates/users/choose_interview.html
+++ b/users/templates/users/choose_interview.html
@@ -3,24 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title>Choose Interview Type</title>
+    {% load static %}
     <style>
         .container {
             text-align: center;
             margin-top: 50px;
         }
-        button {
+
+        .interview-button {
             padding: 15px 30px;
             margin: 10px;
             font-size: 18px;
             cursor: pointer;
+            background-color: #6d84b4; /* Button background color */
+            color: #fff; /* Button text color */
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .interview-button:hover {
+            background-color: #5a7391; /* Button hover background color */
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Choose Your Interview Type</h1>
-        <button onclick="location.href='{% url 'interview_technical:setup' %}'">Technical</button>
-        <button onclick="location.href='{% url 'interview_behavioral:setup' %}'">Behavioral</button>
+        <button class="interview-button" onclick="location.href='{% url 'interview_technical:setup' %}'">Technical</button>
+        <button class="interview-button" onclick="location.href='{% url 'interview_behavioral:setup' %}'">Behavioral</button>
     </div>
+    <script src="{% static 'users/js/script.js' %}"></script>
 </body>
 </html>
