--- a/staticfiles/css/styles.css
+++ b/staticfiles/css/styles.css
@@ -31,11 +31,14 @@ html {
     transform: translate(-50%, -50%);
     font-size: 16px;
     color: #666;
+    z-index: 1;
+    display: none;
 }
 
 #editor {
     width: 100%;
     height: 100%;
+    z-index: 2;
 }
 
 #right-pane {
