--- a/users/templates/users/choose_interview.html
+++ b/users/templates/users/choose_interview.html
@@ -4,28 +4,7 @@
     <meta charset="UTF-8">
     <title>Choose Interview Type</title>
     {% load static %}
-    <style>
-        .container {
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        .interview-button {
-            padding: 15px 30px;
-            margin: 10px;
-            font-size: 18px;
-            cursor: pointer;
-            background-color: #6d84b4; /* Button background color */
-            color: #fff; /* Button text color */
-            border: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
-        }
-
-        .interview-button:hover {
-            background-color: #5a7391; /* Button hover background color */
-        }
-    </style>
+    <link rel="stylesheet" href="{% static 'users/css/style.css' %}">
 </head>
 <body>
     <div class="container">
