--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,27 +1,37 @@
 <!-- users/templates/users/login.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'users/css/style.css' %}">
-</head>
-<body>
-    <nav>
-        <div class="nav-right">
-            <a href="{% url 'home' %}">Back to Home</a>
-        </div>
-    </nav>
-    <div class="form-container">
-        <h2>Login</h2>
-        <form method="post">
+{% extends 'users/base.html' %}
+
+{% block title %}Login - UMPIRE Interview Prep{% endblock %}
+
+{% block content %}
+<div class="auth-container">
+    <div class="auth-box">
+        <h1>Login</h1>
+        <form method="post" class="auth-form">
             {% csrf_token %}
-            <div class="form-content">
-                {{ form.as_p }}
+            {% for field in form %}
+            <div class="form-group">
+                {{ field.label_tag }}
+                {{ field }}
+                {% if field.errors %}
+                <div class="error-message">
+                    {% for error in field.errors %}
+                    <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+                {% endif %}
             </div>
-            <button type="submit">Login</button>
+            {% endfor %}
+            {% if messages %}
+            <div class="messages">
+                {% for message in messages %}
+                <p class="error-message">{{ message }}</p>
+                {% endfor %}
+            </div>
+            {% endif %}
+            <button type="submit" class="btn btn-primary">Login</button>
         </form>
+        <p class="auth-link">Don't have an account? <a href="{% url 'register' %}">Register here</a></p>
     </div>
-</body>
-</html>
+</div>
+{% endblock %}
