--- a/interview_behavioral/templates/interview_behavioral/index.html
+++ b/interview_behavioral/templates/interview_behavioral/index.html
@@ -14,10 +14,6 @@
                 <h1>Techtonic</h1>
                 <span class="user-name">Behavioral Interview</span>
             </div>
-            <div class="header-right">
-                <span class="recording-status"></span>
-                <span class="timer"></span>
-            </div>
         </header>
 
         <!-- Main Content -->
@@ -25,6 +21,10 @@
             <!-- Video Feed -->
             <div class="video-container">
                 <video id="videoElement" autoplay muted></video>
+                <div class="recording-timer">
+                    <div class="dot"></div>
+                    <span id="timer-display">00:00</span>
+                </div>
             </div>
 
             <!-- Chat Interface -->
@@ -36,20 +36,45 @@
                 <div id="chat-messages" class="chat-messages"></div>
                 <div class="chat-controls">
                     <textarea id="user-input" placeholder="Type a message"></textarea>
-                    <button id="send-button" class="control-button">Send</button>
+                    <button id="send-button" class="send-button">Send</button>
                 </div>
             </div>
         </main>
 
         <!-- Footer Controls -->
         <footer class="app-footer">
+            <div class="current-time" id="current-time">5:52:09 PM</div>
             <div class="footer-controls">
-                <button id="leave-button" class="control-button leave">Leave</button>
-                <button id="mute-button" class="control-button">Mute</button>
-                <button id="voice-button" class="control-button">🎤</button>
+                <div class="control-wrapper">
+                    <button id="leave-button" class="control-button leave">
+                        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M18 6L6 18M6 6L18 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                        </svg>
+                    </button>
+                    <span class="button-label">Leave</span>
+                </div>
+                <div class="control-wrapper">
+                    <button id="mute-button" class="control-button mute">
+                        <!-- Microphone On Icon -->
+                        <svg class="mic-on" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12 15c1.66 0 2.99-1.34 2.99-3L15 5c0-1.66-1.34-3-3-3S9 3.34 9 5v7c0 1.66 1.34 3 3 3z" fill="currentColor"/>
+                            <path d="M11 18.92h2V22h-2z" fill="currentColor"/>
+                            <path d="M7 12H5c0 1.93 0.78 3.68 2.05 4.95l1.41-1.41C7.56 14.63 7 13.38 7 12z" fill="currentColor"/>
+                            <path d="M19 12h-2c0 1.38-0.56 2.63-1.46 3.54l1.41 1.41C18.22 15.68 19 13.93 19 12z" fill="currentColor"/>
+                        </svg>
+                        <!-- Microphone Off Icon -->
+                        <svg class="mic-off" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M19 11h-1.7c0 .74-.16 1.43-.43 2.05l1.23 1.23c.56-.98.9-2.09.9-3.28zm-4.02.17c0-.06.02-.11.02-.17V5c0-1.66-1.34-3-3-3S9 3.34 9 5v.18l5.98 5.99zM4.27 3L3 4.27l6.01 6.01V11c0 1.66 1.33 3 2.99 3 .22 0 .44-.03.65-.08l1.66 1.66c-.71.33-1.5.52-2.31.52-2.76 0-5.3-2.1-5.3-5.1H5c0 3.41 2.72 6.23 6 6.72V21h2v-3.28c.91-.13 1.77-.45 2.54-.9L19.73 21 21 19.73 4.27 3z" fill="currentColor"/>
+                        </svg>
+                    </button>
+                    <span class="button-label">Mute</span>
+                </div>
             </div>
         </footer>
     </div>
+    
+    <!-- Hidden input for interview duration -->
+    <input type="hidden" id="interview-duration" value="{{ duration }}">
     
     <!-- Load main script -->
     <script src="{% static 'interview_behavioral/js/main.js' %}"></script>
